--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "monsters-rolodex",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://xiaoling2000.github.io/monsters-rolodex",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
