--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monsters-rolodex",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://xiaoling2000.github.io/monsters-rolodex",
+  "homepage": "https://xiaoling2000.github.io/monsters-rolodex/public/index.html",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
